# Object-Oriented-Programming

./: CODE_OF_CONDUCT.md  ContentView.swift  README.md  SECURITY.md  main.yml  pipApp.swift  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/TruffleHog/TruffleHog/: config-regex-detector.yml  config-regex-implement.py  (+1 more)
.github/workflows/: publish-python-package.yml  python-app.yml
aula01/: aula01a_Lista de prefixos para bases dos números inteiros.py  aula01b__float_ exemplos de números representados em ponto flutuante no Python.py
aula02/: modo_debug.py
aula03/: dicionarios.py  repeticao.py  sequencias.py
aula05/: propriedades.py
aula08_test_pipenv/: Pipfile  requisitos.txt  requisitos_dev.txt
aula09_TDD/: calculadora.py  meu_modulo.py  test_calculadora.py  test_meu_modulo.py
class01_PL/: aula01.py  aula01a_List of prefixes for bases of integer numbers  aula01a_Lista de prefixos para bases dos números inteiros.py  aula01c__strings com mais de uma linha.py  aula01d__string_Cancatenaçnao_Formataçao_{Expressão Avaliada}.py  aula01e__float_Formataçao.py  aula01f__type()_Comando.py
class02_Debug Mode/: modo_debug.py
class03_PL/: dicionarios.py  selecao.py
class05_Classes/: banco.py  classes.py  loop_infinito.py
class06_Inheritance_Polymorphism/: contas_bancarias.py  heranca.py  passaros.py  polimorfismo.py  test_contas.py  test_heranca.py  test_parametro.py
class07_Modules/: importacao.py  meu_modulo.py  outro_arquivo.py
class08a_Virtual Environment_Requirements_pipenv/: requisitos.txt
pip/pip/: pipDocument.swift
(+6 files in other folders)
