[tool.poetry]
name = "meu-projeto"
version = "0.1.0"
description = "Um projeto Python usando Poetry"
authors = ["Seu Nome <seu@email.com>"]

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
secondary = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

